--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
+    "@headlessui/react": "^2.2.1",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "5.15.10",
     "@radix-ui/react-slot": "1.0.2",
+    "@react-google-maps/api": "^2.20.6",
+    "@types/google-maps": "^3.2.6",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "firebase": "^10.8.0",
@@ -30,6 +34,7 @@
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.2.1",
     "@testing-library/user-event": "14.5.2",
+    "@types/google.maps": "^3.58.1",
     "@types/jest": "29.5.12",
     "@types/node": "20.11.16",
     "@types/react": "18.2.55",
