--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "1.0.2",
     "@react-google-maps/api": "^2.20.6",
     "@types/google-maps": "^3.2.6",
+    "@types/googlemaps": "^3.43.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "firebase": "^10.8.0",
