--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,17 +46,23 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "build/*,.env"
+          source: "build/*,nginx/*,.env"
           target: "/var/www/weteamup/"
           strip_components: 1
 
-      - name: Setup VPS
+      - name: Configure VPS
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
+            # Install Nginx if not installed
+            if ! command -v nginx &> /dev/null; then
+              sudo apt-get update
+              sudo apt-get install -y nginx
+            fi
+
             # Install Node.js and npm if not installed
             if ! command -v node &> /dev/null; then
               curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
@@ -65,31 +71,31 @@ jobs:
 
             cd /var/www/weteamup/
 
-            # Create runtime configuration
-            cat > config.js << EOL
-            window.FIREBASE_CONFIG = {
-              apiKey: "${{ secrets.REACT_APP_FIREBASE_API_KEY }}",
-              authDomain: "${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}",
-              projectId: "${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}",
-              storageBucket: "${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}",
-              messagingSenderId: "${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}",
-              appId: "${{ secrets.REACT_APP_FIREBASE_APP_ID }}"
-            };
-            EOL
-
-            # Add config.js to index.html
-            sed -i '/<head>/a \    <script src="/config.js"></script>' index.html
-
-            # Install Firebase dependencies
-            if [ ! -d "node_modules" ]; then
-              npm init -y
-              npm install firebase
+            # Setup Nginx configuration
+            sudo cp nginx/weteamup.conf /etc/nginx/sites-available/
+            sudo ln -sf /etc/nginx/sites-available/weteamup.conf /etc/nginx/sites-enabled/
+            sudo rm -f /etc/nginx/sites-enabled/default
+            
+            # Install PM2 if not installed
+            if ! command -v pm2 &> /dev/null; then
+              sudo npm install -g pm2
             fi
+
+            # Start/Restart the API server with PM2
+            pm2 delete weteamup-api || true
+            pm2 start server.js --name weteamup-api
 
             # Set proper permissions
             sudo chown -R www-data:www-data .
-            sudo chmod 644 config.js .env
+            sudo chmod 644 .env
             sudo chmod 755 node_modules
+
+            # Test Nginx configuration and reload
+            sudo nginx -t && sudo systemctl reload nginx
+
+            # Enable and start Nginx
+            sudo systemctl enable nginx
+            sudo systemctl restart nginx
 
       - name: Notify on Success
         if: success()
