--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "@mui/material": "5.15.10",
     "@radix-ui/react-slot": "1.0.2",
     "@react-google-maps/api": "^2.20.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/google-maps": "^3.2.6",
     "@types/googlemaps": "^3.43.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "firebase": "^10.8.0",
     "lucide-react": "0.330.0",
     "react": "18.2.0",
