--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -28,3 +29,7 @@ yarn-error.log*
 *.swp
 *.swo
 .vercel
+
+# Firebase
+.firebase/
+firebase-debug.log
