--- a/firebase.json
+++ b/firebase.json
@@ -52,5 +52,10 @@
         "npm --prefix \"$RESOURCE_DIR\" run lint"
       ]
     }
-  ]
+  ],
+  "extensions": {
+    "firestore-send-email": {
+      "params": "functions/firestore-send-email.params.json"
+    }
+  }
 }
