--- a/package.json
+++ b/package.json
@@ -3,28 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "update-events": "tsx src/scripts/updateEventsSportType.ts"
   },
   "dependencies": {
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
+    "@craco/craco": "^7.1.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
-    "@mui/material": "5.15.10",
+    "@mailerlite/mailerlite-nodejs": "^1.4.0",
+    "@mui/icons-material": "^5.17.1",
+    "@mui/material": "^5.15.10",
     "@radix-ui/react-slot": "1.0.2",
+    "@sendgrid/mail": "^7.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "axios": "^1.8.4",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "firebase": "^10.14.1",
+    "firebase-admin": "^13.2.0",
     "lucide-react": "0.330.0",
+    "node-fetch": "^3.3.2",
+    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.0",
@@ -38,7 +47,7 @@
     "@testing-library/react": "14.2.1",
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.12",
-    "@types/node": "20.11.16",
+    "@types/node": "^20.11.16",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@types/testing-library__jest-dom": "5.14.9",
@@ -46,7 +55,9 @@
     "patch-package": "8.0.0",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
-    "typescript": "4.9.5"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
+    "typescript": "^4.9.5"
   },
   "eslintConfig": {
     "extends": [
@@ -72,5 +83,10 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "browser": {
+    "fs": false,
+    "path": "path-browserify",
+    "os": false
   }
 }
