--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "patch-package",
     "update-events": "tsx src/scripts/updateEventsSportType.ts"
   },
   "dependencies": {
-    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^2.2.1",
@@ -27,6 +26,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "firebase": "^10.14.1",
@@ -43,6 +43,7 @@
     "web-vitals": "3.5.2"
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.2.1",
     "@testing-library/user-event": "14.5.2",
@@ -52,8 +53,12 @@
     "@types/react-dom": "18.2.19",
     "@types/testing-library__jest-dom": "5.14.9",
     "autoprefixer": "10.4.17",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "null-loader": "^4.0.1",
     "patch-package": "8.0.0",
     "postcss": "8.4.35",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "3.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
