--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "postinstall": "patch-package",
-    "update-events": "tsx src/scripts/updateEventsSportType.ts"
+    "update-events": "tsx src/scripts/updateEventsSportType.ts",
+    "update-status": "tsx src/scripts/updateEventStatus.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -32,12 +33,15 @@
     "firebase": "^10.14.1",
     "firebase-admin": "^13.2.0",
     "lucide-react": "0.330.0",
+    "mapbox-gl": "^3.11.0",
+    "maplibre-gl": "^5.3.1",
     "node-fetch": "^3.3.2",
-    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-map-gl": "^8.0.4",
     "react-router-dom": "6.22.0",
-    "react-scripts": "5.0.1",
     "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "3.5.2"
@@ -57,7 +61,9 @@
     "crypto-browserify": "^3.12.1",
     "null-loader": "^4.0.1",
     "patch-package": "8.0.0",
+    "path-browserify": "^1.0.1",
     "postcss": "8.4.35",
+    "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "3.4.1",
     "ts-node": "^10.9.2",
