--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^5.5.0",
     "react-map-gl": "^8.0.4",
     "react-router-dom": "6.22.0",
+    "react-spring-bottom-sheet": "^3.4.1",
     "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "3.5.2"
