--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sendgrid/mail": "^7.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.8.4",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
@@ -32,6 +33,8 @@
     "express": "^4.18.2",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.2.0",
+    "i18next": "^25.0.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "0.330.0",
     "mapbox-gl": "^3.11.0",
     "maplibre-gl": "^5.3.1",
@@ -39,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-map-gl": "^8.0.4",
     "react-router-dom": "6.22.0",
