Add comprehensive email notification system including welcome emails, event notifications, reminders, and memory sharing features

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mapbox-gl": "^3.11.0",
     "maplibre-gl": "^5.3.1",
     "node-fetch": "^3.3.2",
+    "qrcode.react": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.2",
@@ -58,6 +59,7 @@
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.12",
     "@types/node": "^20.11.16",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@types/testing-library__jest-dom": "5.14.9",
