--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.2.1",
     "@testing-library/user-event": "14.5.2",
+    "@types/i18next": "^12.1.0",
     "@types/jest": "29.5.12",
     "@types/node": "^20.11.16",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
+    "@types/react-i18next": "^7.8.3",
     "@types/testing-library__jest-dom": "5.14.9",
     "autoprefixer": "10.4.17",
     "buffer": "^6.0.3",
