--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/react-dom": "18.2.19",
     "@types/react-i18next": "^7.8.3",
     "@types/testing-library__jest-dom": "5.14.9",
+    "@types/tough-cookie": "^4.0.5",
     "autoprefixer": "10.4.17",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
@@ -77,7 +78,7 @@
     "tailwindcss": "3.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
-    "typescript": "^4.9.5"
+    "typescript": "^5.8.3"
   },
   "eslintConfig": {
     "extends": [
