Deploy V2 functions, update meta tags, fix deployments

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "/event{,/**}",
+        "function": "generateEventMetaTags"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
