--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "tailwindcss": "3.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.3"
+    "typescript": "~5.1.6"
   },
   "eslintConfig": {
     "extends": [
