--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -18,8 +18,8 @@ jobs:
           node-version: '18'
           cache: 'npm'
 
-      - name: Install Dependencies
-        run: npm ci
+      - name: Install Dependencies with Legacy Peer Deps
+        run: npm install --legacy-peer-deps
 
       - name: Create env file
         run: |
