Add group chat functionality and fix map layout

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,9 +1,9 @@
 {
   "projects": {
-    "default": "newprojecta-36c09"
+    "default": "invite-to-sport"
   },
   "targets": {
-    "newprojecta-36c09": {
+    "invite-to-sport": {
       "hosting": {
         "default": [
           "teamup.lt"
