--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@mailerlite/mailerlite-nodejs": "^1.4.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.15.10",
     "@radix-ui/react-slot": "1.0.2",
     "@sendgrid/mail": "^8.1.5",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.1.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/js-cookie": "^3.0.6",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/maplibre-gl": "^1.14.0",
     "axios": "^1.8.4",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
@@ -36,7 +41,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "0.330.0",
     "mapbox-gl": "^3.11.0",
-    "maplibre-gl": "^5.3.1",
+    "maplibre-gl": "^3.6.2",
     "node-fetch": "^3.3.2",
     "qrcode.react": "^4.2.0",
     "react": "18.2.0",
@@ -44,7 +49,7 @@
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
-    "react-map-gl": "^8.0.4",
+    "react-map-gl": "^7.1.0",
     "react-router-dom": "6.22.0",
     "react-spring-bottom-sheet": "^3.4.1",
     "recharts": "^2.15.3",
@@ -59,6 +64,7 @@
     "@testing-library/user-event": "14.5.2",
     "@types/i18next": "^12.1.0",
     "@types/jest": "29.5.12",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/node": "^20.11.16",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "18.2.55",
