--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "firebase-admin": "latest",
     "firebase-functions": "latest",
     "node-fetch": "^2.7.0",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "stripe": "^18.0.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
